handle multiple computing-contexts at the same jvm